@@ -1,8 +1,5 @@
 package io.quarkus.test.utils;
 
-import static java.lang.String.format;
-import static java.lang.String.join;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -17,8 +14,7 @@ public final class ProcessBuilderProvider {
     public static ProcessBuilder command(List<String> command) {
         List<String> effectiveCommand = new ArrayList<>(command);
         if (OS.WINDOWS.isCurrentOs()) {
-            effectiveCommand = List.of("cmd.exe /c " + format("\"%s\"", join(" ", effectiveCommand)));
-            System.out.println("effective commands are " + Arrays.toString(effectiveCommand.toArray()));
+            effectiveCommand.addAll(0, Arrays.asList("cmd", "/c"));
         }
 
         return new ProcessBuilder(effectiveCommand);
